<resources>
    <string name="title_activity_operational">VFRadar</string>
    <string name="app_name">VFRadar</string>
    <string name="idTypeIcao24">ICAO24</string>
    <string name="idTypeOgnId">OGN ID</string>
    <string name="idTypeFlarmId">Flarm ID</string>
    <string name="idTypeRegistration">Registration</string>
    <string name="idTypeCn">CompNr</string>
    <string name="idTypeCallSign">Call sign</string>
    <string name="ognTypesUnknown">unknown</string>
    <string name="ognTypesGlider">Glider</string>
    <string name="ognTypesTowPlane">Tow plane</string>
    <string name="ognTypesHelicopter">Helicopter</string>
    <string name="ognTypesParachute">Parachute</string>
    <string name="ognTypesDropPlane">Drop plane</string>
    <string name="ognTypesHangGlider">Hangglider</string>
    <string name="ognTypesParaGlider">Paraglider</string>
    <string name="ognTypesPoweredAircraft">Aircraft</string>
    <string name="ognTypesJetAircraft">Jet</string>
    <string name="ognTypesUfo">Ufo</string>
    <string name="ognTypesBalloon">Balloon</string>
    <string name="ognTypesAirship">Airship</string>
    <string name="ognTypesUav">UAV</string>
    <string name="ognTypesStaticObject">Static</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General preferences</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_connection">Connection</string>

    <string name="pref_title_coresystem_address">VFRadar-Core URL</string>
    <string name="pref_default_coresystem_address">http://10.10.10.10:60002/live/all</string>

    <string name="pref_title_update_interval">Update interval</string>
    <string-array name="pref_update_interval_titles">
        <item>250 ms</item>
        <item>500 ms</item>
        <item>1 s</item>
        <item>2 s</item>
        <item>5 s</item>
        <item>10 s</item>
        <item>30 s</item>
        <item>60 s</item>
    </string-array>
    <string-array name="pref_update_interval_values">
        <item>250</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
        <item>10000</item>
        <item>30000</item>
        <item>60000</item>
    </string-array>


    <!-- Units preferences-->
    <string name="pref_header_units">Units</string>
    <string name="pref_title_units_height">Altitude</string>
    <string-array name="pref_units_height_titles">
        <item>Feet</item>
        <item>Meters</item>
    </string-array>
    <string-array name="pref_units_height_values">
        <item>Feet</item>
        <item>Meter</item>
    </string-array>

    <string name="pref_title_units_vertical_rate">Vertical rate</string>
    <string-array name="pref_units_vertical_rate_titles">
        <item>Feet per minute</item>
        <item>Meter per second</item>
    </string-array>
    <string-array name="pref_units_vertical_rate_values">
        <item>FeetPerMinute</item>
        <item>MeterPerSecond</item>
    </string-array>

    <!-- Filtering preferences -->

    <string name="pref_header_filtering">Filtering</string>

    <string name="pref_title_filter_enabled">Filter enabled</string>
    <string name="pref_title_filter_summary">Enabled the filter to limit the number of shown plots</string>
    <string name="pref_default_filter_enabled">false</string>

    <string name="pref_title_max_altitude">Maximum Altitude (feet)</string>
    <string name="pref_default_max_altitude">40000</string>

    <string name="pref_title_max_distance">Maximum distance (km)</string>
    <string name="pref_default_max_distance">240</string>


    <!-- Site preferences -->
    <string name="pref_header_site">Site</string>

    <string name="pref_title_use_gps">Use GPS</string>
    <string name="pref_summary_use_gps">Use device GPS to determine the center position</string>

    <string name="pref_title_pick_location">Pick location</string>
    <string name="pref_summary_pick_location">Use a map to pick the center position (requires an active internet connection)</string>
    <string name="pref_title_site_elevation">Elevation (meter)</string>


    <string name="pref_title_center_location">Center location</string>
    <string name="pref_default_center_location">0.00000, 0.00000</string>
    <string name="title_activity_startup">VFRadar</string>
    <string name="startup_tab_location">Location</string>
    <string name="startup_tab_scenario">Scenario</string>
    <string name="startup_tab_summary">Summary</string>
    <string name="action_settings">Preferences ToDo!</string>
    <string name="btn_next_page">Next</string>
    <string name="btn_start">Start</string>
    <string name="no_scenario">NONE</string>
    <string name="no_scenario_description">No scenario will be used. The center location can be set manually</string>

    <string name="startup_location_center">Center location</string>
    <string name="startup_location_fromScenario">From scenario</string>
    <string name="startup_location_useGps">Use GPS</string>
    <string name="startup_location_useLatLon">Set latitude/longitude manually</string>
    <string name="startup_location_usePicker">Pick a location</string>
    <string name="cancelButton">Cancel</string>

    <string name="startup_scenarios_selectScenario">Select a scenario</string>

    <!-- Data preferences -->
    <string name="pref_header_data">Data files</string>
    <string name="pref_title_pick_data_folder">Data folder</string>

    <!-- Appearance preferences -->
    <string name="pref_header_appearance">Appearance</string>
    <string name="pref_title_show_geofences">Show geo fences</string>
    <string name="pref_summary_show_geofences">Shows the geo fence areas</string>

</resources>
