<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="@string/pref_default_filter_enabled"
        android:key="@string/key_plot_filter_enabled"
        android:summary="@string/pref_title_filter_summary"
        android:title="@string/pref_title_filter_enabled" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_max_altitude"
        android:inputType="number"
        android:key="@string/key_plot_filter_maxAlt"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_max_altitude" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_max_distance"
        android:inputType="number"
        android:key="@string/key_plot_filter_maxDist"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_max_distance" />


</PreferenceScreen>
