<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.joostit.vfradar.Startup.SetupLocationFragment">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow android:layout_marginTop="150dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/startup_location_center" />


        <RadioGroup android:id="@+id/centerLocationRadioButtonsGroup">

            <RadioButton
                android:id="@+id/useGpsRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startup_location_useGps" />

            <RadioButton
                android:id="@+id/useLocationPickerRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startup_location_usePicker" />

            <RadioButton
                android:id="@+id/useLatLonRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startup_location_useLatLon" />
        </RadioGroup>

        </TableRow>

        <TableRow>

            <TextView />

            <EditText
                android:id="@+id/latLonBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:ems="10"
                android:inputType="text"
                android:backgroundTint="@android:color/transparent"/>

        </TableRow>

    </TableLayout>


    <Button
        android:id="@+id/nextPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/btn_next_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
